# satisfactory-solver

./: .gitignore  README.txt  closed_loop_nuclear.txt  db.sqlite3  manage.py  requirements.txt
.github/workflows/: main_satopt-webapp.yml
satopt/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
solver-rs/: Cargo.toml  phase_4.txt  phase_4_simple.txt  phase_4_simplest.txt  phase_4_solution.json  phase_5.json  phase_5.txt  uranium_rods.txt
solver-rs/data/: data.json  default.json  default.json5
solver-rs/src/: data.rs  main.rs  outputs.rs  rational.rs  solver.rs
ui/: admin.py  apps.py  models.py  urls.py  views.py
ui/data/: default.json
ui/migrations/: 0001_initial.py  0002_savedsettings.py  0003_alter_savedsettings_options_savedsettings_created_at_and_more.py  0004_alter_defaultsettings_options_and_more.py
ui/optimizer/: main.py  model.py
ui/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  signup.html
ui/templates/ui/: index.html
