[package]
name = "solver-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2", features = ["debug", "display"] }
eyre = "0.6"
good_lp = { version = "1", default-features = false, features = ["highs"] }
graphviz-rust = "0.9"
itertools = "0.14"
lasso = "0.7"
num = "0.4"
petgraph = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
stacker = "0.1"
