[package]
name = "solver-rs"
version = "0.1.0"
edition = "2024"

[features]
highs = ["good_lp/highs"]
scip = ["good_lp/scip", "good_lp/scip_bundled"]
cbc = ["good_lp/coin_cbc"]

[dependencies]
eyre = "0.6"
good_lp = { version = "1", default-features = false }
itertools = "0.14"
lasso = "0.7"
num = "0.4"
petgraph = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
